# futures-trend-day-l2-scalper

./: .env.example  .gitignore  README.md  _run_all_backtests.py  pyproject.toml  requirements.txt
configs/: mes_30s.yaml  mes_30s_optimized.yaml  mes_default.yaml  mes_entry_optimized.yaml  mes_exit_only.yaml  mes_full_optimized.yaml  mes_optimize_net_pnl.yaml  mnq_10s.yaml  mnq_10s_optimized.yaml  mnq_15s.yaml  mnq_15s_optimized.yaml  mnq_30s.yaml  mnq_30s_optimized.yaml  mnq_default.yaml  mnq_entry_optimized.yaml  mnq_exit_optimized.yaml  mnq_full_optimized.yaml  mnq_mtf.yaml  mnq_optimize_net_pnl.yaml  mnq_sl16_optimized.yaml  mnq_walkforward_optimized.yaml
scalper/: __init__.py  backtest.py  config.py  entry_rules.py  exit_rules.py  flow_signals.py  indicators.py  l2_etl.py  l2_score.py  live_gateway.py  mes_es_nq_runner.py  models.py  mtf_backtest.py  nq_confirmation.py  optimize.py  paper_runner.py  reports.py  risk.py  sample_data.py  session_utils.py  trading_safety.py  trend_score.py
scripts/: convert_l2_to_bars.py  convert_real_batch.py  generate_full_report.py  generate_sample_data.py  make_report.py  run_backtest.py  run_final_validation.py  run_optimization.py  run_real_backtests.py  run_recommended_tests.py  run_submin_sweep.py  run_variant_sweep.py
tests/: test_backtest.py  test_config.py  test_entry_exit.py  test_flow_exits.py  test_flow_signals.py  test_indicators.py  test_l2_etl.py  test_l2_score.py  test_mes_es_nq_raw_test_fixes.py  test_mes_es_nq_routing.py  test_mtf_backtest.py  test_paper_runner.py  test_reports.py  test_risk.py  (+2 more)
(+20 files in other folders)
