[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "futures-trend-day-l2-scalper"
version = "0.1.0"
description = "Trend-Day L2 Pullback Scalper — research and backtesting only"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
    "optuna>=3.0.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["scalper*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
